[package]
name = "cosmic-test"
version = "0.1.0"
edition = "2021"

[dependencies]
libcosmic.workspace = true
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
xdg-basedir = "1.0.0"

[workspace.dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
default-features = true
features = ["wayland", "tokio", "multi-window"]

[dependencies.cosmic-time]
git = "https://github.com/pop-os/cosmic-time"
default-features = false
features = ["libcosmic", "once_cell"]

